--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,17 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "afatmustafa/blade-hugeicons": "^0.0.4",
+        "andreiio/blade-iconoir": "^4.6",
         "andreiio/blade-remix-icon": "^3.6",
+        "codeat3/blade-carbon-icons": "^2.31",
         "codeat3/blade-ikonate": "^1.5",
         "codeat3/blade-pepicons": "^1.5",
-        "codeat3/blade-phosphor-icons": "^2.2",
         "filament/filament": "^3.2",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "leandrocfe/filament-apex-charts": "^3.1",
+        "mallardduck/blade-lucide-icons": "^1.23"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
